# pico-temperature

./: CMakeLists.txt  INSTALLATION.md  README.md  main.c
temperature/: CMakeLists.txt  temperature.c  temperature.h
uart/: CMakeLists.txt  uart.c  uart.h
